--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.jfoenix</groupId>
